# hackathon-camera-fingerprinting

./: README.md  main.py  pyproject.toml
ds_notebooks/: analyze_ds.ipynb  eval.ipynb  example_dataset_process.ipynb
forsim_cnn/: eval.ipynb  pred_df_128_8_8.parquet
prnu/: all_preds_same_user.parquet  eval_per_subject.ipynb  prnu_dataset_process.ipynb
